<resources>
    <string name="app_name">PatrolApplication</string>
    <string name="login">登录</string>
    <string name="register">注册</string>
    <string name="username">用户名：</string>
    <string name="password">密码：</string>
    <string name="password_again">确认密码：</string>
    <string name="admin_login">管理员登录</string>
    <string name="admin_register">管理员注册</string>
    <string name="modify_confirm">确认修改</string>
</resources>
