<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/myBackground">

    <LinearLayout
        android:id="@+id/ly1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/ly2"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="欢迎登录巡更系统"
            android:textColor="@color/colorPrimary"
            android:textSize="28sp"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/ly2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/ly1"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:background="@color/lightGray"
        android:padding="20dp"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="90dp"
                    android:layout_height="wrap_content"
                    android:text="@string/username"
                    android:gravity="right"
                    android:textSize="16sp"/>
                <EditText
                    android:id="@+id/username_edt"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:hint="请输入用户名"
                    android:inputType="text"
                    android:imeOptions="actionNext"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="90dp"
                    android:layout_height="wrap_content"
                    android:text="@string/password"
                    android:gravity="right"
                    android:textSize="16sp"/>
                <EditText
                    android:id="@+id/password_edt"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:imeOptions="actionNext"
                    android:hint="请输入密码"/>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/again_layout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:visibility="gone">
                <TextView
                    android:layout_width="90dp"
                    android:layout_height="wrap_content"
                    android:text="@string/password_again"
                    android:gravity="right"
                    android:textSize="16sp"/>
                <EditText
                    android:id="@+id/password_again_edt"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:imeOptions="actionDone"
                    android:hint="请再次输入密码"/>
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center"
            android:layout_marginTop="10dp">
            <Button
                android:id="@+id/login_button"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:text="@string/login"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/model_switch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/register"
                android:textColor="@color/lightBlue"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"/>
            <CheckBox
                android:scaleX="0.6"
                android:scaleY="0.6"
                android:id="@+id/admin_check_box"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/admin_login"
                android:textSize="18sp"/>
        </LinearLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>